Fixed smart-table layout issue where the expand button can cover the first cell on mobile

--- a/sass/components/smart/table/_smart-table.scss
+++ b/sass/components/smart/table/_smart-table.scss
@@ -137,7 +137,7 @@
 
       &:first-child {
         /* Make room for collapse button */
-        padding-bottom: 10px;
+        padding: 30px 0 10px 0;
       }
     }
 
